Complete html structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="top"></div>
-    <div id="middle"></div>
-    <div id="bottom"></div>
+    <div id="top">
+      <ul>
+        <li>About</li>
+        <li>Store</li>
+        <li>Gmail</li>
+        <li>Images</li>
+        <li>Apps</li>
+        <li>Notifications</li>
+        <li>User</li>
+      </ul>
+    </div>
+    <div id="middle">
+      <h1>Google</h1>
+      <form>
+        <input type="text">
+        <p>
+          <button name="google_search" type="submit">Google Search</button>
+          <button name="lucky_search" type="submit">I'm Feeling Lucky</button>
+        </p>
+      </form>
+    </div>
+    <div id="bottom">
+      <ul>
+        <li>Advertising</li>
+        <li>Business</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>Settings</li>
+      </ul>
+    </div>
   </body>
 </html>
