Add basic css formatting

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div id="top">
-      <ul>
+      <ul class="left">
         <li>About</li>
         <li>Store</li>
+      </ul>
+      <ul class="right">
         <li>Gmail</li>
         <li>Images</li>
         <li>Apps</li>
@@ -17,6 +19,7 @@
         <li>User</li>
       </ul>
     </div>
+
     <div id="middle">
       <h1>Google</h1>
       <form>
@@ -27,10 +30,13 @@
         </p>
       </form>
     </div>
+
     <div id="bottom">
-      <ul>
+      <ul class="left">
         <li>Advertising</li>
         <li>Business</li>
+      </ul>
+      <ul class="right">
         <li>Privacy</li>
         <li>Terms</li>
         <li>Settings</li>
