Add links, style search bar

--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="top">
+    <div id="top" class="navbar">
       <ul class="left">
-        <li>About</li>
-        <li>Store</li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Store</a></li>
       </ul>
       <ul class="right">
-        <li>Gmail</li>
-        <li>Images</li>
-        <li>Apps</li>
-        <li>Notifications</li>
-        <li>User</li>
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Images</a></li>
+        <li><a href="#">Apps</a></li>
+        <li><a href="#">Notifications</a></li>
+        <li><a href="#">User</a></li>
       </ul>
     </div>
 
     <div id="middle">
-      <h1>Google</h1>
+      <img src="images/googlelogo.png" width="272" height="92">
       <form>
-        <input type="text">
+        <span class="searchbox"><input type="text"></span>
         <p>
           <button name="google_search" type="submit">Google Search</button>
           <button name="lucky_search" type="submit">I'm Feeling Lucky</button>
@@ -31,15 +31,15 @@
       </form>
     </div>
 
-    <div id="bottom">
+    <div id="bottom" class="navbar">
       <ul class="left">
-        <li>Advertising</li>
-        <li>Business</li>
+        <li><a href="#">Advertising</a></li>
+        <li><a href="#">Business</a></li>
       </ul>
       <ul class="right">
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>Settings</li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Settings</a></li>
       </ul>
     </div>
   </body>
